--- a/InvenTree/locale/nl/LC_MESSAGES/django.po
+++ b/InvenTree/locale/nl/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-21 22:21+0000\n"
-"PO-Revision-Date: 2021-08-22 07:26\n"
+"PO-Revision-Date: 2021-08-22 08:31\n"
 "Last-Translator: \n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
@@ -71,7 +71,7 @@ msgstr "Categorie selecteren"
 #: InvenTree/helpers.py:401
 #, python-brace-format
 msgid "Duplicate serial: {n}"
-msgstr ""
+msgstr "Dubbel serienummer: {n}"
 
 #: InvenTree/helpers.py:408 order/models.py:315 order/models.py:425
 #: stock/views.py:1363
@@ -80,7 +80,7 @@ msgstr "Ongeldige hoeveeldheid ingevoerd"
 
 #: InvenTree/helpers.py:411
 msgid "Empty serial number string"
-msgstr ""
+msgstr "Leeg serienummer"
 
 #: InvenTree/helpers.py:433 InvenTree/helpers.py:436 InvenTree/helpers.py:439
 #: InvenTree/helpers.py:464
@@ -91,7 +91,7 @@ msgstr "Ongeldige groep: {g}"
 #: InvenTree/helpers.py:469
 #, python-brace-format
 msgid "Duplicate serial: {g}"
-msgstr ""
+msgstr "Dubbel serienummer: {g}"
 
 #: InvenTree/helpers.py:477
 msgid "No serial numbers found"
@@ -140,7 +140,7 @@ msgstr "Fout bijlagemap"
 #: InvenTree/models.py:132
 #, python-brace-format
 msgid "Filename contains illegal character '{c}'"
-msgstr ""
+msgstr "Bestandsnaam bevat illegale teken '{c}'"
 
 #: InvenTree/models.py:135
 msgid "Filename missing extension"
@@ -395,11 +395,11 @@ msgstr "Gedemonteerd item"
 
 #: InvenTree/status_codes.py:291
 msgid "Split from parent item"
-msgstr ""
+msgstr "Splits van bovenliggend item"
 
 #: InvenTree/status_codes.py:292
 msgid "Split child item"
-msgstr ""
+msgstr "Splits onderliggende item"
 
 #: InvenTree/status_codes.py:294 templates/js/translated/table_filters.js:173
 msgid "Sent to customer"
@@ -419,7 +419,7 @@ msgstr "Montageopdracht voltooid"
 
 #: InvenTree/status_codes.py:300
 msgid "Received against purchase order"
-msgstr ""
+msgstr "Ontvangen tegen inkoopopdracht"
 
 #: InvenTree/status_codes.py:315
 msgid "Production"
@@ -796,11 +796,11 @@ msgstr ""
 
 #: build/models.py:257 part/templates/part/part_base.html:191
 msgid "Build Status"
-msgstr ""
+msgstr "Bouwstatus"
 
 #: build/models.py:261
 msgid "Build status code"
-msgstr ""
+msgstr "Bouwstatuscode"
 
 #: build/models.py:265 stock/models.py:507
 msgid "Batch Code"
@@ -926,7 +926,7 @@ msgstr ""
 #: build/models.py:1312
 #, python-brace-format
 msgid "Selected stock item not found in BOM for part '{p}'"
-msgstr ""
+msgstr "Geselecteerde voorraadartikel niet gevonden in stuklijst voor onderdeel '{p}'"
 
 #: build/models.py:1372 stock/templates/stock/item_base.html:331
 #: templates/InvenTree/search.html:183 templates/js/translated/build.js:846
@@ -936,7 +936,7 @@ msgstr "Product"
 
 #: build/models.py:1373
 msgid "Build to allocate parts"
-msgstr "Product om onderdelen toe te wijzen"
+msgstr "Bouw om onderdelen toe te wijzen"
 
 #: build/models.py:1389 stock/templates/stock/item_base.html:8
 #: stock/templates/stock/item_base.html:31
@@ -954,7 +954,7 @@ msgstr "Bron voorraadartikel"
 
 #: build/models.py:1403
 msgid "Stock quantity to allocate to build"
-msgstr "Voorraad hoeveelheid te alloceren aan product"
+msgstr "Voorraad hoeveelheid te alloceren aan bouw"
 
 #: build/models.py:1411
 msgid "Install into"
@@ -994,28 +994,28 @@ msgstr "Voorraad items zullen handmatig moeten worden toegewezen"
 #: build/templates/build/build_base.html:18
 #, python-format
 msgid "This Build Order is allocated to Sales Order %(link)s"
-msgstr ""
+msgstr "Deze bouwopdracht is toegewezen aan verkooporder %(link)s"
 
 #: build/templates/build/build_base.html:25
 #, python-format
 msgid "This Build Order is a child of Build Order %(link)s"
-msgstr ""
+msgstr "Deze bouwopdracht is een onderdeel van bouwopdracht %(link)s"
 
 #: build/templates/build/build_base.html:32
 msgid "Build Order is ready to mark as completed"
-msgstr ""
+msgstr "Bouwopdracht is gereed om te markeren als voltooid"
 
 #: build/templates/build/build_base.html:37
 msgid "Build Order cannot be completed as outstanding outputs remain"
-msgstr ""
+msgstr "Bouwopdracht kan niet worden voltooid omdat openstaande outputs blijven"
 
 #: build/templates/build/build_base.html:42
 msgid "Required build quantity has not yet been completed"
-msgstr ""
+msgstr "Vereiste bouwhoeveelheid is nog niet bereikt"
 
 #: build/templates/build/build_base.html:47
 msgid "Stock has not been fully allocated to this Build Order"
-msgstr ""
+msgstr "Voorraad is niet volledig toegewezen aan deze bouwopdracht"
 
 #: build/templates/build/build_base.html:75
 #: company/templates/company/company_base.html:40
@@ -1069,7 +1069,7 @@ msgstr "Annuleer Build"
 
 #: build/templates/build/build_base.html:114
 msgid "Delete Build"
-msgstr ""
+msgstr "Verwijder bouw"
 
 #: build/templates/build/build_base.html:124
 #: build/templates/build/detail.html:15
@@ -1079,7 +1079,7 @@ msgstr "Build details"
 #: build/templates/build/build_base.html:150
 #, python-format
 msgid "This build was due on %(target)s"
-msgstr ""
+msgstr "Deze bouw was verwacht op %(target)s"
 
 #: build/templates/build/build_base.html:157
 #: build/templates/build/detail.html:67
@@ -1106,15 +1106,15 @@ msgstr "Uitgegeven door"
 
 #: build/templates/build/build_base.html:214
 msgid "Incomplete Outputs"
-msgstr ""
+msgstr "Onvolledige bouwuitvoer"
 
 #: build/templates/build/build_base.html:215
 msgid "Build Order cannot be completed as incomplete build outputs remain"
-msgstr ""
+msgstr "Bouwopdracht kan niet worden voltooid omdat onvolledige bouwuitvoer blijft bestaan"
 
 #: build/templates/build/build_output_create.html:7
 msgid "The Bill of Materials contains trackable parts"
-msgstr ""
+msgstr "De stuklijst bevat traceerbare onderdelen"
 
 #: build/templates/build/build_output_create.html:8
 msgid "Build outputs must be generated individually."
@@ -1126,27 +1126,27 @@ msgstr ""
 
 #: build/templates/build/build_output_create.html:15
 msgid "Trackable parts can have serial numbers specified"
-msgstr ""
+msgstr "Traceerbare onderdelen kunnen een serienummer hebben"
 
 #: build/templates/build/build_output_create.html:16
 msgid "Enter serial numbers to generate multiple single build outputs"
-msgstr ""
+msgstr "Voer serienummers in om meerdere bouw-outputs te genereren"
 
 #: build/templates/build/cancel.html:5
 msgid "Are you sure you wish to cancel this build?"
-msgstr ""
+msgstr "Weet je zeker dat je de bouw wilt annuleren?"
 
 #: build/templates/build/complete.html:8
 msgid "Build Order is complete"
-msgstr ""
+msgstr "Bouwopdracht is voltooid"
 
 #: build/templates/build/complete.html:12
 msgid "Build Order is incomplete"
-msgstr ""
+msgstr "Bouwopdracht is onvolledig"
 
 #: build/templates/build/complete.html:15
 msgid "Incompleted build outputs remain"
-msgstr ""
+msgstr "Onvoltooide bouw outputs blijven"
 
 #: build/templates/build/complete.html:18
 msgid "Required build quantity has not been completed"
@@ -1229,7 +1229,7 @@ msgstr "Gecreëerd"
 
 #: build/templates/build/detail.html:130
 msgid "No target date set"
-msgstr ""
+msgstr "Geen doeldatum ingesteld"
 
 #: build/templates/build/detail.html:135 templates/js/translated/build.js:888
 msgid "Completed"
@@ -3265,13 +3265,13 @@ msgstr ""
 #: order/templates/order/purchase_order_detail.html:266
 #: stock/templates/stock/location.html:250
 msgid "New Location"
-msgstr ""
+msgstr "Nieuwe locatie"
 
 #: order/templates/order/order_base.html:197
 #: order/templates/order/purchase_order_detail.html:267
 #: stock/templates/stock/location.html:42
 msgid "Create new stock location"
-msgstr ""
+msgstr "Maak nieuwe voorraadlocatie"
 
 #: order/templates/order/order_cancel.html:8
 msgid "Cancelling this order means that the order and line items will no longer be editable."
@@ -3868,7 +3868,7 @@ msgstr ""
 #: part/bom.py:133 part/models.py:73 part/models.py:731
 #: part/templates/part/category.html:75 part/templates/part/part_base.html:283
 msgid "Default Location"
-msgstr ""
+msgstr "Standaard locatie"
 
 #: part/bom.py:134 part/templates/part/part_base.html:149
 msgid "Available Stock"
@@ -3976,7 +3976,7 @@ msgstr ""
 
 #: part/models.py:74
 msgid "Default location for parts in this category"
-msgstr ""
+msgstr "Standaard locatie voor onderdelen in deze categorie"
 
 #: part/models.py:77
 msgid "Default keywords"
@@ -4640,7 +4640,7 @@ msgstr ""
 
 #: part/templates/part/detail.html:90
 msgid "Sales Order Allocations"
-msgstr ""
+msgstr "Toewijzingen verkoopopdracht"
 
 #: part/templates/part/detail.html:130 part/templates/part/navbar.html:21
 msgid "Part Variants"
@@ -4686,7 +4686,7 @@ msgstr ""
 
 #: part/templates/part/detail.html:274
 msgid "Build Order Allocations"
-msgstr ""
+msgstr "Toewijzingen bouwopdracht"
 
 #: part/templates/part/detail.html:283
 msgid "Part Suppliers"
@@ -4825,13 +4825,13 @@ msgstr ""
 #: stock/templates/stock/item_base.html:77
 #: stock/templates/stock/location.html:53 templates/qr_button.html:1
 msgid "Show QR Code"
-msgstr ""
+msgstr "QR-code weergeven"
 
 #: part/templates/part/part_base.html:78
 #: stock/templates/stock/item_base.html:93
 #: stock/templates/stock/location.html:54
 msgid "Print Label"
-msgstr ""
+msgstr "Label afdrukken"
 
 #: part/templates/part/part_base.html:83
 msgid "Show pricing information"
@@ -4841,7 +4841,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:142
 #: stock/templates/stock/location.html:62
 msgid "Stock actions"
-msgstr ""
+msgstr "Voorraad acties"
 
 #: part/templates/part/part_base.html:95
 msgid "Count part stock"
@@ -5492,7 +5492,7 @@ msgstr ""
 
 #: stock/models.py:463 stock/templates/stock/stock_app_base.html:8
 msgid "Stock Location"
-msgstr ""
+msgstr "Voorraadlocatie"
 
 #: stock/models.py:466
 msgid "Where is this stock item located?"
@@ -5702,7 +5702,7 @@ msgstr ""
 
 #: stock/templates/stock/item_base.html:84 templates/stock_table.html:31
 msgid "Scan to Location"
-msgstr ""
+msgstr "Scan naar locatie"
 
 #: stock/templates/stock/item_base.html:91
 msgid "Printing actions"
@@ -5715,7 +5715,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:108
 #: stock/templates/stock/location.html:69 templates/stock_table.html:57
 msgid "Count stock"
-msgstr ""
+msgstr "Voorraad tellen"
 
 #: stock/templates/stock/item_base.html:111 templates/stock_table.html:55
 msgid "Add stock"
@@ -5732,7 +5732,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:121
 #: stock/templates/stock/location.html:75
 msgid "Transfer stock"
-msgstr ""
+msgstr "Voorraad overzetten"
 
 #: stock/templates/stock/item_base.html:124
 msgid "Assign to customer"
@@ -5827,7 +5827,7 @@ msgstr ""
 #: stock/templates/stock/item_base.html:303
 #: templates/js/translated/build.js:628
 msgid "No location set"
-msgstr ""
+msgstr "Geen Locatie ingesteld"
 
 #: stock/templates/stock/item_base.html:310
 msgid "Barcode Identifier"
@@ -5928,11 +5928,11 @@ msgstr ""
 
 #: stock/templates/stock/location.html:20
 msgid "You are not in the list of owners of this location. This stock location cannot be edited."
-msgstr ""
+msgstr "U staat niet in de lijst van eigenaars van deze locatie. Deze voorraadlocatie kan niet worden bewerkt."
 
 #: stock/templates/stock/location.html:37
 msgid "All stock items"
-msgstr ""
+msgstr "Alle voorraadartikelen"
 
 #: stock/templates/stock/location.html:55
 msgid "Check-in Items"
@@ -5940,19 +5940,19 @@ msgstr ""
 
 #: stock/templates/stock/location.html:83
 msgid "Location actions"
-msgstr ""
+msgstr "Locatie acties"
 
 #: stock/templates/stock/location.html:85
 msgid "Edit location"
-msgstr ""
+msgstr "Bewerk locatie"
 
 #: stock/templates/stock/location.html:87
 msgid "Delete location"
-msgstr ""
+msgstr "Verwijder locatie"
 
 #: stock/templates/stock/location.html:99
 msgid "Location Details"
-msgstr ""
+msgstr "Locatiegegevens"
 
 #: stock/templates/stock/location.html:104
 msgid "Location Path"
@@ -5960,35 +5960,35 @@ msgstr ""
 
 #: stock/templates/stock/location.html:109
 msgid "Location Description"
-msgstr ""
+msgstr "Locatieomschrijving"
 
 #: stock/templates/stock/location.html:114
 #: stock/templates/stock/location.html:155
 #: stock/templates/stock/location_navbar.html:11
 #: stock/templates/stock/location_navbar.html:14
 msgid "Sublocations"
-msgstr ""
+msgstr "Sublocaties"
 
 #: stock/templates/stock/location.html:124
 msgid "Stock Details"
-msgstr ""
+msgstr "Voorraadgegevens"
 
 #: stock/templates/stock/location.html:129 templates/InvenTree/search.html:279
 #: templates/stats.html:97 users/models.py:42
 msgid "Stock Locations"
-msgstr ""
+msgstr "Voorraadlocaties"
 
 #: stock/templates/stock/location.html:162 templates/stock_table.html:37
 msgid "Printing Actions"
-msgstr ""
+msgstr "Afdrukacties"
 
 #: stock/templates/stock/location.html:166 templates/stock_table.html:41
 msgid "Print labels"
-msgstr ""
+msgstr "Labels afdrukken"
 
 #: stock/templates/stock/location.html:251
 msgid "Create new location"
-msgstr ""
+msgstr "Maak nieuwe locatie"
 
 #: stock/templates/stock/location_delete.html:7
 msgid "Are you sure you want to delete this stock location?"
@@ -6049,7 +6049,7 @@ msgstr ""
 
 #: stock/views.py:181
 msgid "Edit Stock Location"
-msgstr ""
+msgstr "Bewerk voorraadlocatie"
 
 #: stock/views.py:288 stock/views.py:911 stock/views.py:1033
 #: stock/views.py:1398
@@ -6058,7 +6058,7 @@ msgstr ""
 
 #: stock/views.py:303
 msgid "Stock Location QR code"
-msgstr ""
+msgstr "QR-code voor voorraadlocatie"
 
 #: stock/views.py:322
 msgid "Assign to Customer"
@@ -6074,7 +6074,7 @@ msgstr ""
 
 #: stock/views.py:364
 msgid "Specify a valid location"
-msgstr ""
+msgstr "Specificeer een geldige locatie"
 
 #: stock/views.py:375
 msgid "Stock item returned from customer"
@@ -6110,7 +6110,7 @@ msgstr ""
 
 #: stock/views.py:959
 msgid "Create new Stock Location"
-msgstr ""
+msgstr "Maak nieuwe voorraadlocatie"
 
 #: stock/views.py:1050
 msgid "Serialize Stock"
@@ -6130,7 +6130,7 @@ msgstr ""
 
 #: stock/views.py:1467
 msgid "Delete Stock Location"
-msgstr ""
+msgstr "Verwijder voorraadlocatie"
 
 #: stock/views.py:1480
 msgid "Delete Stock Item"
@@ -6234,7 +6234,7 @@ msgstr ""
 
 #: templates/InvenTree/search.html:271 templates/js/translated/stock.js:641
 msgid "No stock location set"
-msgstr ""
+msgstr "Geen voorraadlocatie ingesteld"
 
 #: templates/InvenTree/settings/barcode.html:8
 msgid "Barcode Settings"
@@ -7921,11 +7921,11 @@ msgstr ""
 
 #: templates/navbar.html:33
 msgid "Buy"
-msgstr ""
+msgstr "Inkoop"
 
 #: templates/navbar.html:43
 msgid "Sell"
-msgstr ""
+msgstr "Verkoop"
 
 #: templates/navbar.html:55
 msgid "Scan Barcode"
